mise à jour interface et menu console